Error Fix for first release
 follow controller use latest jdk, but our java version is 11 so,
change it to older syntax.
As-Is: stream->map->.tolist
To-Be: stream->map->collect->Collectors->tolist